--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   event_bus: "^1.0.1"
   http: '>=0.11.3+12'
   fluttertoast: ^2.1.2
+  flutter_staggered_animations: "^0.1.2"
 
 
 dev_dependencies:
